--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "afbc_ptz_control",
-  "version": "1.0.0",
-  "description": "My striking Nuxt.js project",
-  "author": "Scott Erwin",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
-  },
-  "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
-    "bootstrap": "^4.1.3"
-  },
-  "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2"
-  }
+   "name": "afbc_ptz_control",
+   "version": "1.0.0",
+   "description": "My striking Nuxt.js project",
+   "author": "Scott Erwin",
+   "private": true,
+   "scripts": {
+      "dev": "nuxt",
+      "build": "nuxt build",
+      "start": "nuxt start",
+      "generate": "nuxt generate",
+      "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+   },
+   "dependencies": {
+      "bootstrap": "^4.6.1",
+      "bootstrap-vue": "^2.21.2",
+      "glob-parent": "^5.1.2",
+      "nuxt": "^2.15.8"
+   },
+   "devDependencies": {
+      "@nuxtjs/eslint-config": "^5.0.0",
+      "@nuxtjs/eslint-module": "^3.0.1",
+      "babel-eslint": "^10.0.1",
+      "eslint": "^8.7.0",
+      "eslint-plugin-nuxt": "^2.0.0"
+   }
 }
